Commit Home page styles

--- a/client/src/Components/Home/categories/categories.module.scss
+++ b/client/src/Components/Home/categories/categories.module.scss
@@ -1,5 +1,60 @@
 .btnCategory{
     display: flex;
     justify-content: center;
-    padding: 10px;
+    gap: 15px;
+}
+.btn{
+    background: #C59E79;
+    color: white;
+    border-radius: 16px;
+    border: none;
+    width: 90px;
+    height: 30px;    
+    &_active{
+        background: #A87E58;
+        color: white;
+        border-radius: 16px;
+        border: none;
+        width: 90px;
+        height: 30px;  
+    }
+}
+.hr{
+    width: 868px;
+    height: 2px;
+    border: none;
+    background: #A1856A;
+}
+.product{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 78px ;
+    justify-content: center;
+    &_photo{
+        margin-top: 45px;
+        margin-left: 30px;
+        width: 252px;
+        height: 205px;
+        border-radius: 14px;
+        border: 1px solid #E6C09D;
+    }
+    &_card{
+        
+        width: 312px;
+        height: 396px;
+        border-radius: 40px;
+        border: 2px solid #BE9B7B;
+    }
+    &_Name{
+        text-align: center;
+        color: #4A3D31;
+        font-size: 20px;
+        margin-top: 15px;
+    }
+    &_price{
+        color: #78BD58;
+        font-size: 22px;
+        margin: 15px 35px;
+    }
 }
