--- a/client/src/Components/Home/categories/categories.module.scss
+++ b/client/src/Components/Home/categories/categories.module.scss
@@ -1,9 +1,11 @@
 .btnCategory{
+    list-style: none;
     display: flex;
     justify-content: center;
     gap: 15px;
 }
 .btn{
+    
     background: #C59E79;
     color: white;
     border-radius: 16px;
