--- a/client/src/Components/Home/categories/categories.module.scss
+++ b/client/src/Components/Home/categories/categories.module.scss
@@ -59,4 +59,10 @@
         font-size: 22px;
         margin: 15px 35px;
     }
+    &_btnAdd{
+        width: 184px;
+        height: 31px;
+        border-radius: 5px;
+        
+    }
 }
