--- a/client/src/Components/PlaceAnOrder/PlaceAnOrder.scss
+++ b/client/src/Components/PlaceAnOrder/PlaceAnOrder.scss
@@ -104,7 +104,7 @@
             width: 30%;
             .form_div {
                 width: 100%;
-                &_input {
+                &_valid-input {
                     width: 90%;
                     height: 30px;
                     margin: 10px 0px;
@@ -112,6 +112,16 @@
                     border: none;
                     border-radius: 16px;
                     padding-left: 10px;
+                }
+                &_invalid-input {
+                    width: 90%;
+                    height: 30px;
+                    margin: 10px 0px;
+                    background: #FFEBE6;
+                    border: none;
+                    border-radius: 16px;
+                    padding-left: 10px;
+                    box-shadow: 0px 0px 5px #FF6C66;
                 }
                 textarea {
                     height: 70px;
