--- a/client/src/Components/Home/categories/categories.module.scss
+++ b/client/src/Components/Home/categories/categories.module.scss
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Jomhuria&display=swap');
+
 .btnCategory{
+    
     list-style: none;
     display: flex;
     justify-content: center;
@@ -22,16 +25,20 @@
     }
 }
 .hr{
+    
     width: 868px;
     height: 2px;
     border: none;
     background: #A1856A;
 }
 .product{
+    background: url(../Group.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    gap: 78px ;
+    gap: 50px ;
     justify-content: center;
     &_photo{
         margin-top: 45px;
@@ -52,17 +59,29 @@
         text-align: center;
         color: #4A3D31;
         font-size: 20px;
-        margin-top: 15px;
+        margin-top: 10px;
     }
     &_price{
         color: #78BD58;
         font-size: 22px;
-        margin: 15px 35px;
+        margin: 10px 35px;
     }
     &_btnAdd{
+        cursor: pointer;
+        margin: 0px 60px;
         width: 184px;
         height: 31px;
         border-radius: 5px;
-        
+        border: none;
+        background: #88613D;
+        color: #FFDCBC;
     }
+}
+.welcomeImg{
+    width: 100%;
+}
+.title{
+    font-family: "Jomhuria", serif;
+    text-align: center;
+    font-size: 40px;
 }
