--- a/client/src/Components/Home/SearchPanel/searchPanel.module.scss
+++ b/client/src/Components/Home/SearchPanel/searchPanel.module.scss
@@ -3,6 +3,16 @@
     height: 30px;
     border: 2px solid #BE9B7B;
     border-radius: 20px;
+    margin-top: 20px;
+    margin-left: 550px;
     
 
+}
+.btnSearch{
+    cursor: pointer;
+    width: 80px;
+    height: 30px;
+    border-radius: 20px;
+    border: none;
+    background: #BE9B7B;
 }
