--- a/client/src/Components/YourOrders/YourOrders.scss
+++ b/client/src/Components/YourOrders/YourOrders.scss
@@ -1,5 +1,10 @@
 @import '../../utils/styles.scss';
 
+.loading {
+    margin-top: 500px;
+    position: fixed;
+}
+
 .upper-section {
     width: 100%;
     display: flex;
