--- a/client/src/Components/Home/categories/categories.module.scss
+++ b/client/src/Components/Home/categories/categories.module.scss
@@ -35,6 +35,8 @@
     background: url(../Group.svg);
     background-repeat: no-repeat;
     background-size: cover;
+    padding-bottom: 20px;
+    padding-top: 20px;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
