--- a/client/src/utils/reset.scss
+++ b/client/src/utils/reset.scss
@@ -19,6 +19,13 @@ time, mark, audio, video {
    vertical-align: baseline;
 }
 
+html, body {
+   width: 100vw;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   overflow-x: hidden;
+}
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
