--- a/client/src/Components/YourOrders/YourOrders.scss
+++ b/client/src/Components/YourOrders/YourOrders.scss
@@ -60,6 +60,7 @@
     .card {
         width: 40%;
         height: 110px;
+        margin-top: 20px;
         background: #F4E3D3;
         display: flex;
         justify-content: space-between;
